third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-mut-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-msrv/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
